# crn-jax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: .gitignore  README.md  bench_crn_jax.py  models.py  plot_results.py  pyproject.toml  run_correctness.py  run_throughput.py
benchmarks/models/: __init__.py  birth_death.py  linear_cascade.py  lotka_volterra.py
examples/: 01_birth_death.py  01_simulate_model_from_library.py  02_opto_hill_1d.py  03_grn_models.py  03_grn_motifs.py  03_vmap_parameter_sweep.py  04_step_interval.py  README.md  library.ipynb  pid_control.ipynb  sample_single_trajectories.ipynb  simulate_distributions_from_library.ipynb
src/crn_jax/: __init__.py  core.py  extras.py  gillespie.py  kinetics.py  plotting.py  templates.py  types.py
src/crn_jax/models/: __init__.py  _common.py  activator_repressor.py  birth_death.py  bistable.py  cca_optogenetic.py  coherent_ffl.py  cyclic_ring.py  incoherent_ffl.py  library.json  linear_cascade.py  linear_chain.py  mutual_activation.py  negative_autoreg.py  negative_autoregulation.py  positive_autoreg.py  positive_autoregulation.py  repressilator.py  single_gene.py  telegraph.py  toggle.py  toggle_switch.py  two_stage.py
src/crn_jax/motifs/: __init__.py  _common.py  autoreg.py  cascade.py  ffl_and.py  inducible.py
tests/: conftest.py  test_core.py  test_extras.py  test_gillespie.py  test_kinetics.py  test_models.py  test_motifs.py  test_templates.py
