[project]
name = "crn-jax"
version = "0.1.0"
description = "Chemical reaction networks in JAX: GPU-parallel stochastic simulation (Gillespie SSA today, τ-leaping / CLE / next-reaction on the roadmap)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Robin Henry", email = "robin.henry012@gmail.com" },
]
keywords = [
    "jax",
    "gillespie",
    "ssa",
    "stochastic-simulation",
    "chemical-reaction-networks",
    "systems-biology",
    "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "jax>=0.4.20",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-xdist>=3",
]
examples = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/robinhenry/crn-jax"
Issues = "https://github.com/robinhenry/crn-jax/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crn_jax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
