[project]
name = "crn-jax"
version = "0.1.0"
description = "Chemical reaction networks in JAX: GPU-parallel stochastic simulations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Robin Henry", email = "robin.henry012@gmail.com" },
]
keywords = [
    "jax",
    "gillespie",
    "ssa",
    "stochastic-simulation",
    "chemical-reaction-networks",
    "systems-biology",
    "gpu",
]
dependencies = [
    "jax>=0.4.20",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-xdist>=3",
]
examples = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
cuda = [
    "jax[cuda12]>=0.4.20",
]
benchmarks = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
dev = [
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/robinhenry/crn-jax"
Issues = "https://github.com/robinhenry/crn-jax/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crn_jax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["crn_jax"]
