[project]
name = "crn-jax"
dynamic = ["version", "dependencies"]
description = "Chemical reaction networks in JAX: GPU-parallel stochastic simulations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Robin Henry", email = "robin.henry012@gmail.com" },
]
keywords = [
    "jax",
    "gillespie",
    "ssa",
    "stochastic-simulation",
    "chemical-reaction-networks",
    "systems-biology",
    "gpu",
]

[project.urls]
Repository = "https://github.com/robinhenry/crn-jax"
Issues = "https://github.com/robinhenry/crn-jax/issues"

[tool.poetry]
packages = [
    { include = "crn_jax", from = "src" },
]
exclude = ["tests", "tests.*"]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
pytest = "^9.0"
pytest-xdist = "^3.0"
pre-commit = "^4.1.0"
matplotlib = "^3.10"
numpy = "^2.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
jax = { version = "^0.7", extras = ["cuda12"] }

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10",
    "numpy>=2.0",
]

# Automatically detect version from git tag.
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v?(?P<base>\\d+(\\.\\d+)*)"
bump = true

[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["crn_jax"]
