[project]
name = "crn-jax-benchmarks"
version = "0.0.0"
description = "Benchmarking crn-jax against GillesPy2 and jax-smfsb."
requires-python = ">=3.10"
dependencies = [
    "gillespy2>=1.9",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
