[project]
name = "crn-jax-benchmarks"
version = "0.0.0"
description = "Benchmarking crn-jax against GillesPy2 and jax-smfsb."
requires-python = ">=3.11"
dependencies = [
    "gillespy2>=1.8",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
